<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_68"
        android:background="@color/color_main"
        android:paddingTop="@dimen/dimen_22">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/public_back_selector">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginRight="@dimen/dimen_15"
                android:src="@drawable/icon_common_back" />

        </RelativeLayout>

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/switch_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_compile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_15"
            android:gravity="center"
            android:text="@string/compile"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_15"
        android:text="@string/click_switch_account"
        android:textColor="@color/color_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_01"
        android:background="@color/color_F9F9F9" />

    <cn.droidlover.xrecyclerview.XRecyclerView
        android:id="@+id/xrv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_add_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_15"
        android:text="@string/add_account"
        android:textColor="@color/color_main" />

</LinearLayout>