<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F9F9F9"
    android:orientation="vertical"
    tools:context=".ui.fragment.user.UserFragment">
    <!--头部标题-->
    <include layout="@layout/layout_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_62.5"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/user_frame_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_143"
            android:background="@color/color_main"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <!--总资产字体-->
                    <TextView
                        android:id="@+id/font_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:text="@string/user_total_assets"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/text_size_13" />
                    <!--总资产-->
                    <TextView
                        android:id="@+id/tv_total_assets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/font_total"
                        android:layout_centerHorizontal="true"
                        android:text="--.--"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/text_size_32" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <!--在途资产字体-->
                    <TextView
                        android:id="@+id/font_passage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:text="@string/user_passage"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/text_size_13" />

                    <!--在途资产-->
                    <TextView
                        android:id="@+id/tv_passage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/font_passage"
                        android:layout_centerHorizontal="true"
                        android:text="--.--"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/text_size_32" />
                </RelativeLayout>
            </LinearLayout>

            <View
                style="@style/divider_half_ff"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginRight="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_52"
                android:layout_marginTop="@dimen/dimen_6"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <!--昨日收益字体-->
                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="昨日收益(12/04)"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/text_size_12" />
                    <!--昨日收益-->
                    <TextView
                        android:id="@+id/tv_yesterday_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:text="--.--"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/text_size_15" />
                </LinearLayout>


                <View
                    android:layout_width="@dimen/dimen_01"
                    android:layout_height="match_parent"
                    android:background="@color/color_FFFFFF" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <!--累计收益字体-->
                    <TextView
                        android:id="@+id/tv_time_accumlate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="累计收益(元)"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/text_size_12" />
                    <!--累计收益-->
                    <TextView
                        android:id="@+id/tv_accumulate_earn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:text="--.--"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/text_size_15" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <!--快速入口-->
        <LinearLayout
            android:id="@+id/ll_fund_middle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_70"
            android:layout_marginBottom="@dimen/dimen_10"
            android:background="@color/color_FFFFFF"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <!--自选-->
            <TextView
                android:id="@+id/self_choose"
                style="@style/user_text_top_image"
                android:drawableTop="@drawable/icon_user_zixuan"
                android:text="@string/user_self_choose" />
            <!--定投-->
            <TextView
                android:id="@+id/timing"
                style="@style/user_text_top_image"
                android:drawableTop="@drawable/icon_user_dingtou"
                android:text="@string/user_timing" />
            <!--交易查询-->
            <TextView
                android:id="@+id/transaction"
                style="@style/user_text_top_image"
                android:drawableTop="@drawable/icon_user_jiaoyi"
                android:text="@string/user_transaction" />
            <!--分红-->
            <TextView
                android:id="@+id/profit"
                style="@style/user_text_top_image"
                android:drawableTop="@drawable/icon_user_fenhong"
                android:text="@string/user_profit" />
            <!--撤单-->
            <TextView
                android:id="@+id/remove"
                style="@style/user_text_top_image"
                android:drawableTop="@drawable/icon_user_chedan"
                android:text="@string/user_remove"
                android:visibility="gone" />

        </LinearLayout>

        <!--如果未开户则不显示这个-->
        <RelativeLayout
            android:id="@+id/ll_fund_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <!--滑动标签栏-->
            <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40"
                android:layout_below="@+id/rl_title"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                app:tabGravity="center"
                app:tabIndicatorColor="@color/color_main"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/color_text_333"
                app:tabTextAppearance="@style/UserTabLayoutTextAppearanceInverse"
                app:tabTextColor="@color/color_727272" />

            <!--分割线-->
            <View
                style="@style/divider_half_e7"
                android:layout_below="@id/tab_layout" />
            <!--页卡-->
            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tab_layout"
                android:layout_marginTop="0.5dp"
                android:background="@color/white"
                android:visibility="visible" />

            <Button
                android:id="@+id/to_finish_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dimen_62.5"
                android:layout_marginRight="@dimen/dimen_62.5"
                android:layout_marginTop="@dimen/dimen_70"
                android:background="@drawable/bg_blue_rect_open"
                android:text="您还未开户，去开户>"
                android:textColor="@color/color_508CEE"
                android:textSize="@dimen/text_size_17"
                android:visibility="visible" />

        </RelativeLayout>

        <!--未开户显示去开户-->

    </LinearLayout>
    <!--</ScrollView>-->

    <!--设置clickable="true" 可以避免点击上层触发底层-->
    <!--登录注册-->
    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_62.5"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100"
            android:layout_marginTop="@dimen/dimen_122"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/login"
            style="@style/common_red_button_rect_login"
            android:text="立即登录" />

        <Button
            android:id="@+id/register"
            style="@style/common_red_button_rect_register"
            android:text="10秒开户" />
    </LinearLayout>

</FrameLayout>
